# productomator

./: .gitignore  LICENSE  README.md  _version.py  pyproject.toml  setup.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/nbsphinx/notebooks/: getting_started.ipynb
docs/_build/doctrees/notebooks/: getting_started.doctree  production_status.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/notebooks/: getting_started.html  production_status.html  production_status.ipynb
examples/: getting_started.ipynb
productomator/: lab.py  production_status.py  worker.py
